--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -4,8 +4,8 @@
       ><img src="/images/logo-eftclub.webp" alt=""
     /></a>
     <p class="lema">A sua cura de dentro para fora</p>
-    <a href="/blog/index.md" class="img_link"
-      ><p class="blogs">EFTclub blogs</p></a
+    <a href="/blog/index" class="img_link"
+      ><p class="blogs">EFTclub blog</p></a
     >
   </div>
 
