--- a/src/scss/style-blogs.scss
+++ b/src/scss/style-blogs.scss
@@ -75,6 +75,12 @@
       border-radius: 30px;
       margin-top: 1rem;
 
+      h3 {
+        font-size: 1rem;
+        font-weight: 600;
+        line-height: 1.2rem;
+      }
+
       img {
         max-width: 80px;
       }
@@ -321,6 +327,13 @@
     margin-bottom: 1rem;
     text-align: center;
   }
+}
+
+#show-more-tags {
+  font-size: 0.8rem;
+  margin: 0.5rem;
+  color: variables.$color-primary;
+  cursor: pointer;
 }
 
 .container-search {
