--- a/src/_includes/base_post.njk
+++ b/src/_includes/base_post.njk
@@ -64,7 +64,7 @@
         <div class="ajuda">
           <h2>Precisa da minha ajuda?</h2>
           <!-- <a href="/index" class="btn btn_border">Saiba Mais</a> -->
-           <p><a href="/index">Saiba Mais →</a></p>
+           <p><a class="btn" href="/index">Saiba Mais →</a></p>
         </div>
 
         <div class="artigos">
