--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -59,12 +59,15 @@
 
       <section class="logo">
         <img
-          loading="lazy"
-          width="512"
-          height="auto"
-          src="/images/logo-eftclub.webp"
-          alt=""
-        />
+      src="/images/logo-eftclub-64w.webp"
+      srcset="
+        /images/logo-eftclub-32w.webp   32w,
+        /images/logo-eftclub-64w.webp   64w,
+        /images/logo-eftclub-128w.webp 128w,
+        /images/logo-eftclub-512w.webp 512w
+      "
+      sizes="100px"
+      alt="EFT Club logo">
       </section>
 
       <section class="aviso_legal">
