--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,8 +1,17 @@
 <nav role="navigation" aria-label="main menu" class="navigation">
   <div class="nav-main">
     <a href="/index.html" class="img_link"
-      ><img src="/images/logo-eftclub.webp" alt=""
-    /></a>
+      ><img
+      src="/images/logo-eftclub-64w.webp"
+      srcset="
+        /images/logo-eftclub-32w.webp   32w,
+        /images/logo-eftclub-64w.webp   64w,
+        /images/logo-eftclub-128w.webp 128w,
+        /images/logo-eftclub-512w.webp 512w
+      "
+      sizes="50px"
+      alt="EFT Club logo">
+    </a>
     <p class="lema">A sua cura de dentro para fora</p>
     <a href="/blog/index" class="img_link"
       ><p class="blogs">EFTclub blog</p></a
