--- a/src/index.njk
+++ b/src/index.njk
@@ -72,7 +72,13 @@
       <section id="main">
         <div class="banner">
           <img
-            src="/images/logo-terapia-cura-emocional.webp"
+            src="/images/logo-terapia-cura-emocional-300w.webp"
+            srcset="
+              /images/logo-terapia-cura-emocional-300w.webp 1x,
+              /images/logo-terapia-cura-emocional-792w.webp 2x
+              "
+            sizes="300"
+            height="auto"
             alt="Logo da Terapia Cura Emocional"
           />
         </div>
