--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -13,7 +13,7 @@
       alt="EFT Club logo">
     </a>
     <p class="lema">A sua cura de dentro para fora</p>
-    <a href="/blog/index" class="img_link"
+    <a href="/blog/" class="img_link"
       ><p class="blogs">EFTclub blog</p></a
     >
   </div>
