--- a/src/blog/search.njk
+++ b/src/blog/search.njk
@@ -4,7 +4,7 @@ permalink: /search/
 title: Resultados da pesquisa
 ---
 
-<p class="go-back"><a href="/blog/index">← Ver todos os artigos</a></p>
+<p class="go-back"><a href="/blog/">← Ver todos os artigos</a></p>
 <!-- placeholder for "Resultados da pesquisa para 'termo'" -->
 <p id="search-info" class="search-info"></p>
 
