--- a/src/blog/tags.njk
+++ b/src/blog/tags.njk
@@ -12,7 +12,7 @@ eleventyComputed:
 ---
 
 
-<p><a href="/blog/index">← Ver todos os artigos</a></p>
+<p><a href="/blog/">← Ver todos os artigos</a></p>
 
 {% import "snippet.njk" as Snippet %}
 
