--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -33,7 +33,7 @@ body {
 h1 {
   font-size: clamp(1.5rem, 5vw, 2.5rem); // ~29px to 40px
   font-weight: 700;
-  line-height: 1.3em;
+  line-height: 1.1em;
   text-wrap: balance;
 }
 
@@ -160,7 +160,8 @@ p {
     gap: 0.5rem;
     justify-content: center;
 
-    li {
+    a {
+      display: inline-block;
       background-color: $color-primary;
       padding: 0.3rem 1rem;
       border-radius: 1rem;
@@ -171,7 +172,7 @@ p {
 
       &:hover,
       &:focus {
-        transform: scale(1.1);
+        transform: scale(1.05);
         background-color: $color-secondary;
       }
 
