--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,7 +33,7 @@
   }
 
   .content {
-    padding: 2rem clamp(1rem, 4vw, 5rem) 0rem;
+    padding: 2em 0rem;
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
