--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -31,14 +31,14 @@ body {
 }
 
 h1 {
-  font-size: clamp(1.5rem, 5vw, 2.5rem); // ~29px to 40px
+  font-size: 2rem;
   font-weight: 700;
-  line-height: 1.1em;
+  line-height: 1.2em;
   text-wrap: balance;
 }
 
 h2 {
-  font-size: clamp(1rem, 4vw, 1.5rem); // ~29px to 40px
+  font-size: 1.3rem;
   font-weight: 700;
   line-height: 1.3em;
   text-align: center;
@@ -46,6 +46,7 @@ h2 {
 
 h3 {
   line-height: 1.5rem;
+  font-size: 1rem;
 }
 
 p {
