--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,6 +34,7 @@
 
   .content {
     padding: 2em 0rem;
+    max-width: 900px;
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
@@ -89,7 +90,7 @@
     font-weight: 700;
 
     img {
-      width: clamp(150px, 20vw, 200px);
+      max-width: 200px;
     }
 
     ul {
@@ -209,6 +210,7 @@
     flex-direction: column;
     gap: 2rem;
     justify-content: center;
+    align-items: center;
 
     ul {
       display: flex;
