--- a/src/404.njk
+++ b/src/404.njk
@@ -21,7 +21,7 @@ eleventyExcludeFromCollections: true
     {% include "header.njk" %}
 
     <div class="notFound_div">
-    <h1 class="404_title">Oops! Página não encontrada.</h1>
+    <h1 class="notFound_title">Oops! Página não encontrada.</h1>
 
     <p class="notFound_btn"><a class="btn btn_border" href="/index">Ir à página principal →</a></p>
 </div>
