--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -524,4 +524,9 @@ body.no-scroll {
     justify-content: center;
     align-items: center;
   }
+
+  .notFound_title {
+    text-align: center;
+    margin: 0px 1rem;
+  }
 }
