--- a/src/_includes/base_post.njk
+++ b/src/_includes/base_post.njk
@@ -131,17 +131,10 @@
     ></script>
   
     <!-- Favicons -->
-    <link
-      rel="icon"
-      href="/images/icons/favicon-32.png"
-      sizes="32x32"
-      type="image/png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/images/icons/apple-touch-icon.png"
-    />
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon.png" sizes="180x180" />
+    <link rel="icon" href="/images/icons/favicon-32.png" sizes="32x32" />
+    <link rel="icon" href="/images/icons/favicon-16.png" sizes="16x16" />
   </head>
   
 
