Animations on blog page

--- a/src/_includes/base_blog.njk
+++ b/src/_includes/base_blog.njk
@@ -63,10 +63,10 @@
   <body>
     {% include "header.njk" %}
 
-    <main class="container blog-index" aria-label="EFTclub Blog Content">
+    <main id="swup" class="container blog-index" aria-label="EFTclub Blog Content">
       
       <div class="container-title">
-        <h1> {{ title }} </h1>
+        <h1 class="transition-fade"> {{ title }} </h1>
         <p>Leia mais sobre como você pode melhorar a sua qualidade de vida.</p>
       </div>
       
