--- a/src/blog/search.njk
+++ b/src/blog/search.njk
@@ -10,7 +10,7 @@ title: Resultados da pesquisa
 
 <ul role="list" id="search-results" class="articles_list flow">
   <template id="snippet-template">
-    <li class="snippet">
+    <li class="snippet transition-slide-up transition-fade">
       <a href="">
         <img src="" alt="">
         <h3 class="snippet_title"></h3>
