Google property verification

--- a/src/index.njk
+++ b/src/index.njk
@@ -58,6 +58,8 @@
     <link rel="icon" href="/images/icons/favicon-16.png" sizes="16x16" type="image/png" />
 
     <script type="module" defer src="/js/main.js"></script>
+
+    <meta name="google-site-verification" content="oAziMsbr70hn7jCEzC2Vf2zvrjMq9ah6g3epfFtGfd4" />
   </head>
   
 
